UY-1304/9 general QA fixes